ultimo commit, dark mode fix y minor bugs

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,40 +10,53 @@ ul {
 list-style-position:inside;
 }
 
-.main__principal{
-    background-image: url(https://static.tumblr.com/5d0e54afb1d9542b8d4f38ca3df6d9bc/qzwdlv3/MNbosz7af/tumblr_static_tumblr_static_4622t31mrfggk8404g48os80c_640.gif);
-    color: white;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 30vh;
-    width: 100vw;
-    text-align: center;
-}
+
 :any-link{
     color: brown;
 }
-#lorem {
+
+#listaCarrito´{
     border: 1px solid black;
-    padding: 50px;
+    padding: 70px; /* Increase padding to create space */
     width: 50%;
     max-width: 800px;
     text-align: center;
     margin: 0 auto;
+    margin-bottom: 70px;
+}
+#lorem {
+    border: 1px solid black;
+    padding: 5  0px;
+    width: 50%;
+    max-width: 800px;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 10px;
   }
   
 
-  .dark{
+  .dark {
     background-color: black;
     color: white;
-    border-color:peru;
-    border: peru;
+    border-color: peru;
+    border: 1px solid peru; /* Fix here */
   }
-  .dark h1{
+  
+  .dark h1 {
     background-color: peru;
     color: black;
   }
+  .dark #listaCarrito {
+    border-color: peru;
+    background-color: peru;
+    
+  }
+  
+  .dark #lorem{
+    border-color: peru;
+    background-color: black;
+  }
+
 
 
 @media only screen and (max-width: 480px) {
